assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
body, html {
  height: 100%;
}

body {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  margin: 0;
  background: url("/assets/images/game-wp.jpg");
}

body #mainShell {
  position: absolute;
  background-color: #A6A3A1;
  width: 100%;
  min-height: 500px;
  position: absolute;
  z-index: -1;
}

#headBar {
  z-index: 1;
  position: relative;
}

#gif {
  z-index: 1;
  position: relative;
  background-color: #BF2424;
  width: 60%;
  border-style: dashed;
  border-width: 5px;
  border-color: #F2F2F2;
  border-radius: 50px;
}

#gif #gifs-appear-here img {
  width: 50%;
}

#menu {
  z-index: 1;
  position: relative;
}

#cards {
  z-index: 1;
  position: relative;
  width: 70%;
}

img {
  width: 80%;
}

@media (min-width: 1200px) {
  .card-columns {
    -webkit-column-count: 3;
            column-count: 3;
  }
}

@media (min-width: 992px) and (max-width: 1199.98px) {
  .card-columns {
    -webkit-column-count: 3;
            column-count: 3;
  }
}

@media (min-width: 768px) and (max-width: 991.98px) {
  .card-columns {
    -webkit-column-count: 1;
            column-count: 1;
  }
}

@media (min-width: 576px) and (max-width: 767.98px) {
  .card-columns {
    -webkit-column-count: 1;
            column-count: 1;
  }
}
/*# sourceMappingURL=style.css.map */

